--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ logs
 _.log
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
-# dotenv environment variable files
-.env
+# # dotenv environment variable files
+# .env
 .env.development.local
 .env.test.local
 .env.production.local
